create actions and reducers

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-beautiful-dnd": "^10.1.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,6 +28,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-autocomplete-cli": "0.0.3"
+    "react-autocomplete-cli": "0.0.3",
+    "redux": "^4.0.1"
   }
 }
