--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
     "react-beautiful-dnd": "^10.1.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
+    "react-draggable": "^3.2.1",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "redux-thunk": "^2.3.0"
